--- a/Angular/SocialNetwork/src/styles.css
+++ b/Angular/SocialNetwork/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+.avatar {
+  margin: 10px auto;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background-size: cover;
+}
+.avatar-sm {
+  margin: 5px auto;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+}
+.ht-30 {
+  height: 30px;
+}
+.col-3 {
+  min-width: 100px;
+}
+.row {
+  flex-wrap: nowrap;
+}
+
+#postContainer {
+  max-width: 600px;
+  min-width: 500px;
+}
