--- a/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
+++ b/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
@@ -1,7 +1,7 @@
 <div class="border">
   <div class="">Total: {{ comments.length }}</div>
   <button
-    class="btn btn-primary btn-block"
+    class="btn ht2 p-0 btn-block"
     [class.btn-secondary]="!isSelected"
     [class.btn-success]="isSelected"
     (click)="onClick()"
