--- a/Angular/SocialNetwork/src/app/like-container/like-container.component.html
+++ b/Angular/SocialNetwork/src/app/like-container/like-container.component.html
@@ -2,9 +2,9 @@
   <div class="">Total:{{ likeCount }}</div>
 
   <button
-    class="btn btn-primary btn-block"
-    [class.btn-secondary]="!isSelected"
-    [class.btn-success]="isSelected"
+    class="btn ht2 p-0 btn-block"
+    [class.btn-secondary]="isSelected"
+    [class.btn-success]="!isSelected"
     (click)="onClick()"
   >
     Like
