Added Complete UI layout for Angular Project

--- a/Angular/SocialNetwork/src/app/app.component.html
+++ b/Angular/SocialNetwork/src/app/app.component.html
@@ -1,2 +1,3 @@
-<!-- <comment-form></comment-form> -->
-<post-container></post-container>
+<!-- <post-container></post-container> -->
+<!-- <login-page></login-page> -->
+<home-page></home-page>
