--- a/Angular/SocialNetwork/src/app/post-form/post-form.component.html
+++ b/Angular/SocialNetwork/src/app/post-form/post-form.component.html
@@ -1,3 +1,6 @@
 <div class="border">
-  <user-content-input-form></user-content-input-form>
+  <div class="container ht1 color1">
+    Post Container Form
+  </div>
+  <user-content-input-form type="post"></user-content-input-form>
 </div>
