Added boostrap styling and toggle for home page

--- a/Angular/SocialNetwork/src/app/app.component.html
+++ b/Angular/SocialNetwork/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <post-container></post-container> -->
-<login-page></login-page>
-<!-- <home-page></home-page> -->
+<!-- <login-page></login-page> -->
+<home-page></home-page>
