--- a/Angular/SocialNetwork/src/app/post-container/post-container.component.html
+++ b/Angular/SocialNetwork/src/app/post-container/post-container.component.html
@@ -1,4 +1,4 @@
 <div id="postContainer" class="container border">
   <post-form></post-form>
-  <post-container-feed></post-container-feed>
+  <post-container-feed [postFeed]="posts"></post-container-feed>
 </div>
