--- a/Angular/SocialNetwork/src/app/like-container/like-container.component.html
+++ b/Angular/SocialNetwork/src/app/like-container/like-container.component.html
@@ -4,7 +4,7 @@
   <button
     class="btn ht2 p-0 btn-block"
     [class.btn-secondary]="isSelected"
-    [class.btn-success]="!isSelected"
+    [class.btn-info]="!isSelected"
     (click)="onClick()"
   >
     Like
