Added Angular stuff

--- a/Angular/SocialNetwork/src/app/login-page/login-page.component.html
+++ b/Angular/SocialNetwork/src/app/login-page/login-page.component.html
@@ -39,14 +39,14 @@
           />
         </div>
       </form>
-      <a href="#" style="color: cornflowerblue;">Reset My Password</a>
+      <password-reset></password-reset>
     </div>
   </div>
 </div>
 <div class="container">
   <div class="row">
     <div class="col-6">
-      Something about our Project
+      <about-us></about-us>
     </div>
     <div class="col-6">
       For sign-up
