--- a/Angular/SocialNetwork/src/app/app.component.html
+++ b/Angular/SocialNetwork/src/app/app.component.html
@@ -1,3 +1,18 @@
 <!-- <post-container></post-container> -->
 <!-- <login-page></login-page> -->
 <home-page></home-page>
+<!-- <input
+  (change)="onImagePicked($event)"
+  placeholder="Upload Image"
+  type="file"
+/>
+<button (click)="onImageUpload()">Upload Image</button>
+
+<div *ngIf="imageUrl">
+  Preview Image from AWS
+  <br />
+  <img
+    width="200px"
+    src="https://project-imagess.s3.amazonaws.com/{{ imageUrl }}"
+  />
+</div> -->
