--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -4,17 +4,6 @@
 <div class="container">
   <div class="row">
     <div class="col-3">
-      <!-- <div class="border">My profile toggle</div>
-      <button (click)="toggle()" id="bt">{{buttonName}}</button>
-      <div class="border">
-        modify info toggle<br>
-        <button (click)="toggle2()" id="bt2">{{buttonName2}}</button>
-        <ul>
-          <li>Upload Profile Pic</li>
-        </ul>
-      </div>
-      <div class="border">search the network toggle</div>
-      <button (click)="toggle3()" id="bt3">{{buttonName3}}</button> -->
       <!--TODO: check out my version of the buttons-->
       <button
         (click)="view = 'MyProfile'"
@@ -44,21 +33,18 @@
       <div [ngSwitch]="view">
         <ng-template [ngSwitchCase]="'MyProfile'">
           <div class="border">
-            Display this box if "My Profile" is selected
-            <div>Profile Information Component</div>
+            <profile-information></profile-information>
             <post-container [postFeed]="posts"></post-container>
           </div>
         </ng-template>
         <ng-template [ngSwitchCase]="'UpdateProfile'">
           <div class="border">
-            Display this box if "Modify Info" is selected
-            <div>Modify Info Component</div>
+            <update-profile></update-profile>
           </div>
         </ng-template>
         <ng-template [ngSwitchCase]="'SearchNetwork'">
           <div class="border">
-            Display this box if "Search Network" is selected
-            <div>Search Network Component</div>
+            <search-network></search-network>
           </div>
         </ng-template>
       </div>
@@ -68,37 +54,6 @@
         <div>Users Profile Component</div>
       </div>
       <!--TODO: check out my version of the display-->
-      <!--TODO:Or just using ngIf-->
-      <div>
-        delete this
-        <div *ngIf="view == 'MyProfile'">display MyProfile</div>
-        <div *ngIf="view == 'UpdateProfile'">display UpdateProfile</div>
-        <div *ngIf="view == 'SearchNetwork'">display SearchNetwork</div>
-      </div>
-      <!--TODO:Or just using ngIf-->
-      <!-- <ng-container *ngIf="show">
-        <div class="border">
-          Display this box if "My Profile" is selected
-          <div>Profile Information Component</div>
-          <post-container></post-container>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="show2">
-        <div class="border">
-          Display this box if "Modify Info" is selected
-          <div>Modify Info Component</div>
-        </div>
-      </ng-container>
-      <ng-container *ngIf="show3">
-        <div class="border">
-          Display this box if "Search Network" is selected
-          <div>Search Network Component</div>
-        </div>
-      </ng-container>
-      <div class="border">
-        Display this box if "Search Network/userId" is selected
-        <div>Users Profile Component</div>
-      </div> -->
     </div>
   </div>
 </div>
