Andres Angular code

--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -34,7 +34,7 @@
         <ng-template [ngSwitchCase]="'MyProfile'">
           <div class="border">
             <profile-information></profile-information>
-            <post-container [postFeed]="posts"></post-container>
+            <!--post-container [postFeed]="posts"></post-container-->
           </div>
         </ng-template>
         <ng-template [ngSwitchCase]="'UpdateProfile'">
