Organized data to match Java

--- a/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
+++ b/Angular/SocialNetwork/src/app/comment-container/comment-container.component.html
@@ -1,6 +1,6 @@
-<div class="container border">
+<div class="">
   <div>
-    <comment-form></comment-form>
+    <comment-form [user]="user"></comment-form>
   </div>
 
   <div *ngFor="let item of comments">
