--- a/Angular/SocialNetwork/src/app/comment-form/comment-form.component.html
+++ b/Angular/SocialNetwork/src/app/comment-form/comment-form.component.html
@@ -1,3 +1,6 @@
 <div>
-  <user-content-input-form type="comment"></user-content-input-form>
+  <user-content-input-form
+    [user]="user"
+    type="comment"
+  ></user-content-input-form>
 </div>
