--- a/Angular/SocialNetwork/src/app/comment/comment.component.html
+++ b/Angular/SocialNetwork/src/app/comment/comment.component.html
@@ -1,8 +1,8 @@
-<div class="row border">
+<div class="row border rounded">
   <div [ngStyle]="picture" class="avatar-sm"></div>
   <div class="col-10">
-    {{ comment.commenter }}
+    {{ comment.firstName + " " + comment.lastName }}
     <hr class="m-0 p-0" />
-    {{ comment.text }}
+    {{ comment.body }}
   </div>
 </div>
