--- a/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
+++ b/Angular/SocialNetwork/src/app/comments-toggle/comments-toggle.component.html
@@ -1,11 +1,10 @@
-<div class="border">
-  <div class="">Total: {{ comments.length }}</div>
+<div class=" ">
   <button
     class="btn ht2 p-0 btn-block"
     [class.btn-secondary]="!isSelected"
     [class.btn-info]="isSelected"
     (click)="onClick()"
   >
-    Comments
+    {{ comments.length }} Comments
   </button>
 </div>
