--- a/Angular/SocialNetwork/src/app/like-container/like-container.component.html
+++ b/Angular/SocialNetwork/src/app/like-container/like-container.component.html
@@ -1,12 +1,10 @@
-<div class="border">
-  <div class="">Total:{{ likeCount }}</div>
-
+<div class=" ">
   <button
     class="btn ht2 p-0 btn-block"
     [class.btn-secondary]="isSelected"
     [class.btn-info]="!isSelected"
     (click)="onClick()"
   >
-    Like
+    {{ likeCount }} Likes
   </button>
 </div>
