--- a/Angular/SocialNetwork/src/app/post-container-feed/post-container-feed.component.html
+++ b/Angular/SocialNetwork/src/app/post-container-feed/post-container-feed.component.html
@@ -1,7 +1,7 @@
 <div class="container ht1 color1">
-  Post Container Feed
+  Recent Squawks
 </div>
 <div *ngIf="posts.length == 0" class="container text-center">No posts</div>
 <div *ngFor="let item of posts">
-  <post [in]="item"></post>
+  <post [user]="user" [in]="item"></post>
 </div>
