--- a/Angular/SocialNetwork/src/app/post-form/post-form.component.html
+++ b/Angular/SocialNetwork/src/app/post-form/post-form.component.html
@@ -1,6 +1,4 @@
-<div class="border">
-  <div class="container ht1 color1">
-    Post Container Form
-  </div>
-  <user-content-input-form type="post"></user-content-input-form>
+<div class="border rounded">
+  <div class="container ht1 color1">Create a new Squawk</div>
+  <user-content-input-form [user]="user" type="post"></user-content-input-form>
 </div>
