--- a/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
+++ b/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
@@ -1,25 +1,22 @@
-    <p>profile-information works!</p>
-    <div class="row pb-2">
-        <div class="col-3">
-          
-          
-        </div>
-      
-        <div class="col-9">
-          <form>
-            <div class="row container">
-                <div [ngStyle]="picture" class="avatar"></div>
-            </div>
-            <div class="row container">
-                <p class="text-center">FULL NAME: {{ user.fullName }}</p>
-            </div>
-            <div class="row container">
-                <p class="text-center">EMAIL: {{ user.email }}</p>
-            </div>
-            <div class="row container">
-                <p class="text-center">ABOUT ME: {{ user.bio }}</p>
-            </div>
-          </form>
-        </div>
+<div class="row pb-2">
+  <div class="col-3"></div>
+
+  <div class="col-9">
+    <form>
+      <div class="row container">
+        <div [ngStyle]="picture" class="avatar"></div>
       </div>
-      
+      <div class="row container">
+        <p class="text-center">
+          FULL NAME: {{ user.firstName + " " + user.lastName }}
+        </p>
+      </div>
+      <div class="row container">
+        <p class="text-center">EMAIL: {{ user.email }}</p>
+      </div>
+      <div class="row container">
+        <p class="text-center">ABOUT ME: {{ user.aboutMe }}</p>
+      </div>
+    </form>
+  </div>
+</div>
