--- a/Angular/SocialNetwork/src/app/search-network/search-network.component.html
+++ b/Angular/SocialNetwork/src/app/search-network/search-network.component.html
@@ -1,1 +1,3 @@
-<p>search-network works!</p>
+<div>list all users here</div>
+<div>add button next to their name</div>
+<div>onClick change the focused profile above</div>
