profile pic funcitons work

--- a/Angular/SocialNetwork/src/app/app.component.html
+++ b/Angular/SocialNetwork/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- <login-page></login-page> -->
 <home-page></home-page>
-<!-- <form>
+<form>
   <input
     type="file"
     id="fileInput"
@@ -14,4 +14,4 @@
   <input type="text" id="usr" name="username" />
   <input type="submit" id="btn2" (click)="getImage()" />
 </form>
-<img [src]="image" alt="" /> -->
+<img [src]="image" alt="" />
