Added profile image code - untested

--- a/Angular/SocialNetwork/src/app/post/post.component.html
+++ b/Angular/SocialNetwork/src/app/post/post.component.html
@@ -12,7 +12,8 @@
         <div class="text-center">
           {{ post.firstName + " " + post.lastName }}
         </div>
-        <div [ngStyle]="picture" class="avatar"></div>
+        <!-- <div [ngStyle]="picture" class="avatar"></div> -->
+        <img [src]="image" height="100px" width="100px" alt="" />
       </div>
 
       <div class="col-9">
