--- a/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
+++ b/Angular/SocialNetwork/src/app/profile-information/profile-information.component.html
@@ -4,7 +4,8 @@
   <div class="col-9">
     <form>
       <div class="row container">
-        <div [ngStyle]="picture" class="avatar"></div>
+        <!-- <div [ngStyle]="picture" class="avatar"></div> -->
+        <img [src]="image" height="100px" width="100px" alt="" />
       </div>
       <div class="row container">
         <p class="text-center">
