--- a/Angular/SocialNetwork/src/app/comment/comment.component.html
+++ b/Angular/SocialNetwork/src/app/comment/comment.component.html
@@ -1,5 +1,6 @@
 <div class="row border rounded">
-  <div [ngStyle]="picture" class="avatar-sm"></div>
+  <!-- <div [ngStyle]="picture" class="avatar"></div> -->
+  <img [src]="image" height="50px" width="50px" alt="" />
   <div class="col-10">
     {{ comment.firstName + " " + comment.lastName }}
     <hr class="m-0 p-0" />
