--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="RevatureSquawk.jpg" alt="Squaker" />
+        <img src="" alt="Squaker" />
       </div>
       <div class="col-6 text-right">
         <a class="text-info" href="#">logout</a>
