--- a/Angular/SocialNetwork/src/styles.css
+++ b/Angular/SocialNetwork/src/styles.css
@@ -1,5 +1,6 @@
 .avatar {
   margin: 10px auto;
+  border: 1px solid black;
   border-radius: 50%;
   width: 100px;
   height: 100px;
@@ -7,6 +8,7 @@
 }
 .avatar-sm {
   margin: 5px auto;
+  border: 1px solid black;
   border-radius: 50%;
   width: 50px;
   height: 50px;
