Connected user login, registration and basic navigation

--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -5,7 +5,7 @@
         <img src="" alt="Squaker" />
       </div>
       <div class="col-6 text-right">
-        <a class="text-info" href="#">logout</a>
+        <a class="text-info" (click)="onLogout()" href="#">logout</a>
       </div>
     </div>
   </div>
