--- a/Angular/SocialNetwork/src/app/app.component.html
+++ b/Angular/SocialNetwork/src/app/app.component.html
@@ -1,2 +1,9 @@
-<!-- <login-page></login-page> -->
-<home-page></home-page>
+<login-page
+  *ngIf="view == 'login'"
+  (userChange)="userChange($event)"
+></login-page>
+<home-page
+  *ngIf="view == 'home'"
+  (logout)="onLogout()"
+  [user]="user"
+></home-page>
