--- a/Angular/SocialNetwork/src/app/home-page/home-page.component.html
+++ b/Angular/SocialNetwork/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="" alt="Squaker" />
+        <img class = "thelogo" src="../../assets/img/RevatureSquawk.jpg"/>
       </div>
       <div class="col-6 text-right">
         <a class="text-info" (click)="onLogout()" href="#">logout</a>
